# BillingJelantikFTTHV3

./: .env.example  .env.prod.example  .env.staging.example  .flake8  .gitignore  .readthedocs.yaml  ANALISIS_KOMPREHENSIF_SISTEM.md  API_DOCUMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.backend  FiturRetrayInvoice.txt  INVOICE_RETRY_SYSTEM.md  MIGRATION_GUIDE.md  MIgrationRetray.txt  NAMING_CONVENTIONS.md  RATE_LIMITER_COMPLETE.md  RATE_LIMITER_INTEGRATION.md  README-DEVOPS.md  WHATSAPP_DEBUG_GUIDE.md  alembic.ini  capacitor.config.json  debug_data_consistency.py  debug_paket_consistency.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  hasil.txt  migrate-to-new-repo.ps1  netmiko.py  package-lock.json  package.json  pyproject.toml  pytest.ini  readme.md  requirements.txt  seed_data_simple.py  seed_data_sk.py  setup_java.sh  (+2 more)
.claude/: settings.local.json
.github/workflows/: build-android.yml  ci-cd-fixed.yml  ci-cd.yml  deploy.yml  pr-check.yml  python-linter.yml  secrets-setup.md  test-ci-fixes.yml
.marscode/: deviceInfo.json
.swm/: billing-system-x-payment-xendit.cu0bxclv.sw.md  dokumentasi-otentikasi-pengguna.3i3pz4c1.sw.md  swimm.json
DATABASE-EXISTING/: backup_20251010_235417.sql  react_billing (3).sql
alembic/: env.py
alembic/versions/: 2210f33597f3_optimize_database_indexes.py  267262874499_add_revoked_before_to_user_model_and_.py  52cc25f5333f_fix_data_teknis_overly_long_composite_.py  7b55743fbc96_add_activity_logs_table.py  8481b912af1f_cleanup_langganan_over_indexing_.py  8c09acf411f3_add_payment_callback_log_table.py  a108430b9b4a_add_password_changed_at_to_user_model.py  a1b2c3d4e5f6_add_dashboard_composite_indexes.py  b16dcd40912c_cleanup_over_indexing_remove_redundant_.py  b68575008a99_buat_revisi_dasar_baru.py  b71150711a61_cleanup_mikrotik_server_over_indexing_.py  f735203f82de_add_is_active_to_user_model.py
android/app/: build.gradle
app/: __init__.py  auth.py  build.gradle.kts  config.py  constants.py  dashboard_logger.py  database.py  encryption.py  encryption_utils.py  jobs.py  jobs_traffic.py  logging_config.py  logging_config_secure.py  logging_enhanced.py  logging_utils.py  main.py  path_config.py  query_optimization.py  security.py  simple_logging.py  vue.config.js  websocket_manager.py
app/middleware/: query_timeout.py  rate_limit.py  response_optimization.py
app/migrations/: add_revenue_report_indexes.py
app/models/: __init__.py  activity_log.py  data_teknis.py  harga_layanan.py  inventory_history.py  inventory_item.py  inventory_item_type.py  inventory_status.py  invoice.py  langganan.py  mikrotik_server.py  odp.py  olt.py  paket_layanan.py  payment_callback_log.py  pelanggan.py  permission.py  role.py  role_has_permissions.py  sk.py  syarat_ketentuan.py  system_log.py  system_setting.py  token_blacklist.py  traffic_history.py  trouble_ticket.py  user.py
app/routers/: activity_log.py  auth.py  calculator.py  dashboard.py  dashboard_pelanggan.py  data_teknis.py  debug.py  error_report.py  harga_layanan.py  inventory.py  inventory_status.py  inventory_type.py  invoice.py  langganan.py  mikrotik_server.py  odp.py  olt.py  (+16 more)
frontend/: .eslintrc.js  .gitignore  ADVANCED_BUILD_TOOLS.md  BUILD_COMMANDS_GUIDE.md  BUILD_RESULTS_ANALYSIS.md  Dockerfile  ENHANCED_PACKAGE_SCRIPTS.md  QUICK_INSTALL.sh  bundle-analysis.html  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
scripts/: final_import_complete_data.py  quality-check.sh
tests/: conftest.py  test_main.py  test_pelanggan.py  test_users.py
(+273 files in other folders)
